# Tree-Modeling

./: CMakeCache.txt  CMakeLists.txt  ImageMatting  ImageMatting.cbp  Makefile  PixelGraph.cpp  PixelGraph.h  PixelNode.cpp  PixelNode.h  cmake_install.cmake  cube.cpp  cube.h  globalmatting.cpp  guidedfilter.cpp  main.cpp  vec3d.cpp  vec3d.h  voxel_reconstruction.cpp  voxel_reconstruction.h
Image_based_Tree_Modeling/: CMakeLists.txt  globalmatting.cpp  globalmatting.h  guidedfilter.cpp  guidedfilter.h  main.cpp
Images/: tree224red.psd
